# upload_image_service

backend/: file.filename  pyproject.toml  sql_app.db
backend/sql_app/: main.py
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.js
frontend-react/src/components/: image-upload.component.js
frontend-react/src/services/: file-upload.service.js
