[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pham Nam <nam.pham@diag.vn>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
PyJWT = "^2.4.0"
SQLAlchemy = "^1.4.36"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
